# enum-other

./: Cargo.toml  LICENSE  README.md
examples/: custom_other_ident.rs  omit_discriminant.rs  simple.rs  string.rs  tuple.rs
src/: lib.rs
